# video-app

./: Dockerfile  README.md  run_docker.sh
backend/: CMakeLists.txt  Dockerfile  TODO.md  base.Dockerfile  run_docker.sh
backend/src/: Video.hpp  main.cpp
frontend/: Dockerfile  package-lock.json  run_docker.sh
frontend/src/: App.tsx
src/: Video.cpp
